kill fat and secrets

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ django-json-rpc
 django-annoying
 stormed
 gunicorn
+django_evolution
 -e git+https://github.com/facebook/tornado.git#egg=tornado
 -e git+https://github.com/mrjoes/sockjs-tornado.git#egg=sockjs_tornado
